added another partial, and I'm working on building the table for the data to populate when searched for

--- a/partials/home.html
+++ b/partials/home.html
@@ -32,3 +32,9 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+
+
+<!-- ADD A GRAPHIC HERE TO SHOW UPON LOGIN, BUT REPLACED ONCE A SEARCH IS CONDUCTED -->
+
+
+<!-- ADD IN A TABLE FOR THE PRODUCTS TO POPULATE -->
