--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default" ng-controller="NavBarCtrl">
+<nav class="navbar navbar-default" ng-controller="NavBarCtrl" ng-show="isLoggedIn">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
