--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -16,10 +16,9 @@
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Saved Products</a></li>
-            <li><a href="#">Locate Products</a></li>
+            <li><a href="#!/profile">Saved Promotions</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Profile</a></li>
+            <li><a href="#!/profile">Profile</a></li>
           </ul>
         </li>
       </ul>
