--- a/partials/profile.html
+++ b/partials/profile.html
@@ -31,4 +31,13 @@
 
 
 <!-- Beginning of Google Maps Stuff -->
-<div>The Google Maps API</div>
+<div id="map">The Google Maps API</div>
+
+<!--  <iframe src="//www.google.com/maps/embed/v1/place?q=Harrods,Brompton%20Rd,%20UK
+      &zoom=17
+      &key=AIzaSyAEj6YaqTxOsHaT3Yj3UJHCfCj-cDl38Zk">
+  </iframe> -->
+<script
+	async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEj6YaqTxOsHaT3Yj3UJHCfCj-cDl38Zk&v=3&callback=initMap">
+</script>
