--- a/partials/profile.html
+++ b/partials/profile.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" id="save">
   <div class="row">
     <table class="table table-hover table-bordered">
     <thead class="table table-inverse">
@@ -28,16 +28,4 @@
 
 
 
-
-
-<!-- Beginning of Google Maps Stuff -->
-<div id="map">The Google Maps API</div>
-
-<!--  This initially works, but isn't exactly what I want
-<iframe src="//www.google.com/maps/embed/v1/place?q=Harrods,Brompton%20Rd,%20UK
-      &zoom=17
-      &key=AIzaSyAEj6YaqTxOsHaT3Yj3UJHCfCj-cDl38Zk">
-  </iframe> -->
-<script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEj6YaqTxOsHaT3Yj3UJHCfCj-cDl38Zk&v=3&callback=initMap">
-</script>
+<div id="mapid"></div>
