--- a/partials/profile.html
+++ b/partials/profile.html
@@ -18,7 +18,7 @@
 	            <button type="button" class="btn btn-primary btn-sm pull-right" ng-click="removePromo(savedPromo.id)">
 	              <span class="glyphicon glyphicon-trash"></span> Remove Promo
 	            </button>
-	            <button type="button" class="btn btn-primary btn-sm pull-right" ng-click="mapPromo(savedPromo.id)">
+	            <button type="button" class="btn btn-primary btn-sm pull-right" ng-click="mapPromo(savedPromo.store)">
 	              <span class="glyphicon glyphicon-pushpin"></span> Map Promo
 	            </button>
 	          </td>
