--- a/partials/login.html
+++ b/partials/login.html
@@ -1,26 +1,29 @@
-<div class="move-down"></div>
-<div class="col-sm-4 text-center col-sm-offset-4 pull-right">
-	<h5>Login with Google</h5>
+<div class="container">
+  <div class="move-down"></div>
+  <div class="col-sm-4 text-center col-sm-offset-4 pull-right">
+  	<h5>Login with Google</h5>
 
-	<button ng-click="loginGoogle()" class="btn btn-info" id="loginbtn">Login</button>
+  	<button ng-click="loginGoogle()" class="btn btn-info" id="loginbtn">Login</button>
+  </div>
+
+  <form class="form-horizontal pull-left">
+    <div class="form-group">
+      <label for="inputEmail3" class="col-sm-2 control-label sr-only">Email</label>
+      <div class="col-sm-10">
+        <input type="email" class="form-control" id="inputEmail3" placeholder="Email" ng-model="account.email">
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="inputPassword3" class="col-sm-2 control-label sr-only">Password</label>
+      <div class="col-sm-10">
+        <input type="password" class="form-control" id="inputPassword3" placeholder="Password" ng-model="account.password">
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <button type="submit" class="btn btn-success" ng-click="register()">Sign Up</button>
+        <button type="submit" class="btn btn-primary" ng-click="login()">Login In</button>
+      </div>
+    </div>
+  </form>
 </div>
-
-<form class="form-horizontal pull-left">
-  <div class="form-group">
-    <label for="inputEmail3" class="col-sm-2 control-label sr-only">Email</label>
-    <div class="col-sm-10">
-      <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="inputPassword3" class="col-sm-2 control-label sr-only">Password</label>
-    <div class="col-sm-10">
-      <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default" ng-click="register()">Sign Up</button>
-    </div>
-  </div>
-</form>
