--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#!/home">Let's Find Groceries!</a>
+      <a class="navbar-brand" href="#!/home">Grocery Bargains</a>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -24,7 +24,7 @@
       </ul>
       <form class="navbar-form navbar-left">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Find those Bargains!" ng-model="searchText.search">
+          <input type="text" class="form-control" placeholder="Search Promotions" ng-model="searchText.search">
         </div>
       </form>
       <ul class="nav navbar-nav navbar-right">
