the div's on the login page are sitting where I want them, now I want to think more about color scheme and logo

--- a/partials/home.html
+++ b/partials/home.html
@@ -1,9 +1,8 @@
 <!-- ADD A GRAPHIC HERE TO SHOW UPON LOGIN, BUT REPLACED ONCE A SEARCH IS CONDUCTED -->
 
-<!-- use bootstrap table classes to style this -->
 <div class="container">
   <div class="row">
-    <table class="table table-hover table-bordered">
+    <table class="table table-hover" id="promo-table">
     <thead class="table table-inverse">
       <th>Product Name</th>
       <th>Regular Price</th>
