--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,10 @@
+* {
+	font-family: 'Fira Sans', sans-serif;
+}
+
 body {
 	margin: 1em;
 	background-color: #D3D3D3;
-	font-family: 'Oxygen', sans-serif;
 }
 
 /*Login Styling*/
@@ -18,6 +21,19 @@ h4 {
 	font-size: 25px;
 }
 
+.login-flex {
+	display: flex;
+	flex-direction: row;
+	align-items: flex-start;
+}
+
+#google-login {
+	flex-grow: 1;
+}
+
+#login-form {
+	flex-grow: 1;
+}
 /*Button Styling*/
 
 
@@ -33,8 +49,7 @@ h4 {
 	width: 55%;
 	display: inline-block;
 	border: 2px solid black;
-/*	box-shadow: 3px 3px 3px black;
-*/}
+}
 
 #mapid { 
 	height: 400px;
@@ -43,4 +58,10 @@ h4 {
 	margin-left: 15px;
 	border: 2px solid black;
 	box-shadow: 3px 3px 3px black;
+}
+
+/*Promotions Page Styling*/
+
+#promo-table {
+	border: 2px solid black;
 }
