--- a/partials/login.html
+++ b/partials/login.html
@@ -1,13 +1,21 @@
-<div class="container">
-  <div class="move-down"></div>
-  <div class="col-sm-4 text-center col-sm-offset-4 pull-right">
-  	<h5>Login with Google</h5>
+<div class="move-down"></div>
+<div class="container login-flex">
+  
 
+  <div class="col-sm-4 text-center" id="google-login">
+  	<h4>Login with Google</h4>
+    <hr>
   	<button ng-click="loginGoogle()" class="btn btn-info" id="loginbtn">Login</button>
   </div>
 
-  <form class="form-horizontal pull-left">
+
+
+
+  <form class="form-horizontal text-center" id="login-form">
     <div class="form-group">
+      <h4>Sign In or Register</h4>
+      <hr>
+
       <label for="inputEmail3" class="col-sm-2 control-label sr-only">Email</label>
       <div class="col-sm-10">
         <input type="email" class="form-control" id="inputEmail3" placeholder="Email" ng-model="account.email">
