breaking up tables

--- a/partials/home.html
+++ b/partials/home.html
@@ -1,5 +1,3 @@
-<!-- I WANT TO BREAK THIS TABLE UP BY CATEGORY AS IT IS NG-REPEATED THROUGH AND PUBLISHED TO THE DOM -->
-
 <div class="container">
   <div class="row" >
     <table class="table table-hover" id="promo-table">
@@ -10,11 +8,9 @@
         <th>Sale Valid Through</th>
         <th>Find It Here!</th>
       </thead>
-      <tbody>
-        <label ng-repeat="each in promotion">
-          {{promotion.category | uppercase}}
-        </label>
-        <tr ng-repeat="promotion in promotions | filter: searchText.search">
+      <label>{{promotion.category | uppercase}}</label>
+      <tbody  ng-repeat="promotion in promotions | filter: searchText.search" ng-if="promotion.category === 'dairy'">
+        <tr>
           <td>{{promotion.name}}</td>
           <td class="text-muted">{{promotion.reg_price | currency}}</td>
           <td class="text-success"><em><strong>{{promotion.discount_price | currency}}</strong></em></td>
@@ -27,5 +23,98 @@
         </tr>
       </tbody>
     </table>
+
+    <table class="table table-hover" id="promo-table">
+      <thead class="table table-inverse" >
+        <th>Product Name</th>
+        <th>Regular Price</th>
+        <th>Sale Price</th>
+        <th>Sale Valid Through</th>
+        <th>Find It Here!</th>
+      </thead>
+      <tbody  ng-repeat="promotion in promotions | filter: searchText.search" ng-if="promotion.category === 'seafood'">
+        <tr>
+          <td>{{promotion.name}}</td>
+          <td class="text-muted">{{promotion.reg_price | currency}}</td>
+          <td class="text-success"><em><strong>{{promotion.discount_price | currency}}</strong></em></td>
+          <td class="text-danger"><strong>{{promotion.promo_end}}</strong></td>
+          <td>{{promotion.store}}
+            <button type="button" class="btn btn-primary btn-sm pull-right" ng-click="savePromo(promotion)">
+              <span class="glyphicon glyphicon-plus"></span> Add Promo
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+
+    <table class="table table-hover" id="promo-table">
+      <thead class="table table-inverse" >
+        <th>Product Name</th>
+        <th>Regular Price</th>
+        <th>Sale Price</th>
+        <th>Sale Valid Through</th>
+        <th>Find It Here!</th>
+      </thead>
+      <tbody  ng-repeat="promotion in promotions | filter: searchText.search" ng-if="promotion.category === 'baked goods'">
+        <tr>
+          <td>{{promotion.name}}</td>
+          <td class="text-muted">{{promotion.reg_price | currency}}</td>
+          <td class="text-success"><em><strong>{{promotion.discount_price | currency}}</strong></em></td>
+          <td class="text-danger"><strong>{{promotion.promo_end}}</strong></td>
+          <td>{{promotion.store}}
+            <button type="button" class="btn btn-primary btn-sm pull-right" ng-click="savePromo(promotion)">
+              <span class="glyphicon glyphicon-plus"></span> Add Promo
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+
+    <table class="table table-hover" id="promo-table">
+      <thead class="table table-inverse" >
+        <th>Product Name</th>
+        <th>Regular Price</th>
+        <th>Sale Price</th>
+        <th>Sale Valid Through</th>
+        <th>Find It Here!</th>
+      </thead>
+      <tbody  ng-repeat="promotion in promotions | filter: searchText.search" ng-if="promotion.category === 'produce'">
+        <tr>
+          <td>{{promotion.name}}</td>
+          <td class="text-muted">{{promotion.reg_price | currency}}</td>
+          <td class="text-success"><em><strong>{{promotion.discount_price | currency}}</strong></em></td>
+          <td class="text-danger"><strong>{{promotion.promo_end}}</strong></td>
+          <td>{{promotion.store}}
+            <button type="button" class="btn btn-primary btn-sm pull-right" ng-click="savePromo(promotion)">
+              <span class="glyphicon glyphicon-plus"></span> Add Promo
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+
+    <table class="table table-hover" id="promo-table">
+      <thead class="table table-inverse" >
+        <th>Product Name</th>
+        <th>Regular Price</th>
+        <th>Sale Price</th>
+        <th>Sale Valid Through</th>
+        <th>Find It Here!</th>
+      </thead>
+      <tbody  ng-repeat="promotion in promotions | filter: searchText.search" ng-if="promotion.category === 'condiments'">
+        <tr>
+          <td>{{promotion.name}}</td>
+          <td class="text-muted">{{promotion.reg_price | currency}}</td>
+          <td class="text-success"><em><strong>{{promotion.discount_price | currency}}</strong></em></td>
+          <td class="text-danger"><strong>{{promotion.promo_end}}</strong></td>
+          <td>{{promotion.store}}
+            <button type="button" class="btn btn-primary btn-sm pull-right" ng-click="savePromo(promotion)">
+              <span class="glyphicon glyphicon-plus"></span> Add Promo
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+
   </div>
 </div>
