added a back to top button on the promo page

--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
 
 body {
 	margin: 1em;
-	background-color: #D3D3D3;
+	background-color: #bfb9b7;
 }
 
 /*Login Styling*/
@@ -34,8 +34,47 @@ h4 {
 #login-form {
 	flex-grow: 1;
 }
-/*Button Styling*/
-
+/*Back to Top Button Styling*/
+#return-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background: rgb(0, 0, 0);
+    background: rgba(0, 0, 0, 0.7);
+    width: 50px;
+    height: 50px;
+    display: block;
+    text-decoration: none;
+    -webkit-border-radius: 35px;
+    -moz-border-radius: 35px;
+    border-radius: 35px;
+    display: none;
+    -webkit-transition: all 0.3s linear;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+#return-to-top i {
+    color: #fff;
+    margin: 0;
+    position: relative;
+    left: 16px;
+    top: 13px;
+    font-size: 19px;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+#return-to-top:hover {
+    background: rgba(0, 0, 0, 0.9);
+}
+#return-to-top:hover i {
+    color: #fff;
+    top: 5px;
+}
 
 /*Profile Page Styling*/
 
@@ -64,4 +103,15 @@ h4 {
 
 .promo-table {
 	border: 2px solid black;
+}
+
+/*Fixed Footer Styling*/
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: #f5f5f5;
 }
