--- a/partials/login.html
+++ b/partials/login.html
@@ -5,7 +5,7 @@
   <div class="col-sm-4 text-center" id="google-login">
   	<h4>Login with Google</h4>
     <hr>
-  	<button ng-click="loginGoogle()" class="btn btn-info" id="loginbtn">Login</button>
+  	<button ng-click="loginGoogle()" class="btn btn-primary" id="loginbtn">Login</button>
   </div>
 
 
