--- a/css/main.css
+++ b/css/main.css
@@ -92,7 +92,6 @@ h4 {
 	justify-content: flex-start;
 	width: 55%;
 	display: inline-block;
-	border: 2px solid black;
 }
 
 #mapid { 
@@ -105,7 +104,7 @@ h4 {
 
 /*Promotions Page Styling*/
 
-.promo-table {
+table {
 	border: 2px solid black;
 	background-color: white;
 }
