--- a/partials/profile.html
+++ b/partials/profile.html
@@ -1,7 +1,7 @@
 <div class="profile-flex">
 	<div class="container" id="save">
 	  <div class="row">
-	    <table class="table table-hover">
+	    <table class="table">
 	    <thead class="table table-inverse">
 	      <th>Product Name</th>
 	      <th>Regular Price</th>
