added popups that show when a promo has been added to the user's profile list

--- a/partials/profile.html
+++ b/partials/profile.html
@@ -2,6 +2,7 @@
 	<div class="container" id="save">
 	  <div class="row">
 	    <table class="table">
+	    <h4>Your List</h4>
 	    <thead class="table table-inverse">
 	      <th>Product Name</th>
 	      <th>Regular Price</th>
