--- a/css/main.css
+++ b/css/main.css
@@ -109,6 +109,32 @@ table {
 	background-color: white;
 }
 
+
+/*Modal Styling*/
+
+.alert-success {
+	background-color: green;
+	border-color: rgba(149, 149, 149, 0.3);
+	border-radius: 3px;
+	color: white;
+	padding: 10px;
+	max-width: 200px;
+}
+/*.alert-success > [data-notify="icon"] {
+	height: 50px;
+	margin-right: 12px;
+}*/
+.alert-success > [data-notify="title"] {
+	color: rgb(51, 51, 51);
+	display: block;
+	font-weight: bold;
+	margin-bottom: 5px;
+}
+.alert-success > [data-notify="message"] {
+	font-size: 100%;
+}
+
+
 /*NavBar Styling*/
 .navbar-default {
 	box-shadow: 2px 2px 2px 1px black;
